# ncs-zigbee

./: .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  LICENSE  README.md  west.yml
lib/zboss/: CMakeLists.txt  Kconfig
lib/zboss/include/: zb_address.h  zb_channel_page.h  zb_config.h  zb_config_common.h  zb_debug.h  zb_diag.h  zb_diag_init.h  zb_errors.h  zb_list_macros.h  zb_mem_config_common.h  zb_mem_config_context.h  zb_mem_config_max.h  zb_mem_config_min.h  zb_osif.h  zb_pooled_list.h  zb_ringbuffer.h  zb_trace.h  zb_types.h  zb_version.h  zboss_api.h  zboss_api_af.h  zboss_api_aps.h  zboss_api_core.h  zboss_api_internal.h  zboss_api_nwk.h  zboss_api_zcl.h  zboss_api_zdo.h  zboss_api_zgp.h
lib/zboss/include/ha/: zb_ha_combined_interface.h  zb_ha_configuration_tool.h  zb_ha_device_config.h  zb_ha_door_lock.h  zb_ha_door_lock_controller.h  zb_ha_erl_device_interface.h  zb_ha_ias_ancillary_control_equipment.h  zb_ha_ias_control_indicating_equipment.h  zb_ha_ias_warning_device.h  zb_ha_ias_zone.h  zb_ha_level_control_switch.h  zb_ha_level_controllable_output.h  zb_ha_mains_power_outlet.h  zb_ha_on_off_output.h  zb_ha_on_off_switch.h  zb_ha_range_extender.h  zb_ha_scene_selector.h  zb_ha_shade.h  zb_ha_shade_controller.h  zb_ha_simple_sensor.h  zb_ha_smart_plug.h  zb_ha_temperature_sensor.h  zb_ha_window_covering.h  zb_ha_window_covering_controller.h
lib/zboss/include/osif/: build_info.h  libzboss_config.ed.h  libzboss_config.h  zb_ncp_nrf_platform.h  zb_osif_platform.h  zb_revision_r22.h  zb_vendor.h
lib/zboss/include/zcl/: zb_zcl_analog_input.h  zb_zcl_basic.h  zb_zcl_binary_input.h  zb_zcl_commands.h  zb_zcl_common.h  zb_zcl_control4_networking.h  zb_zcl_cvc_commands.h  zb_zcl_dehumidification_control.h  zb_zcl_device_temp_config.h  zb_zcl_diagnostics.h  zb_zcl_direct_configuration.h  zb_zcl_door_lock.h  zb_zcl_el_measurement.h  zb_zcl_fan_control.h  zb_zcl_groups.h  zb_zcl_ias_ace.h  zb_zcl_identify.h  zb_zcl_illuminance_measurement.h  zb_zcl_level_control.h  zb_zcl_metering.h  zb_zcl_multistate_input.h  zb_zcl_on_off.h  zb_zcl_ota_upgrade.h  zb_zcl_pm2_5_measurement.h  zb_zcl_poll_control.h  zb_zcl_pressure_measurement.h  zb_zcl_price.h  zb_zcl_reporting.h  zb_zcl_temp_measurement.h  zb_zcl_thermostat.h  zb_zcl_thermostat_ui_config.h  zb_zcl_time.h  zb_zcl_touchlink_commissioning.h  zb_zcl_tunneling.h  zb_zcl_window_covering.h  zb_zcl_wwah.h
lib/zboss/production/include/: zb_address.h  zb_channel_page.h  zb_config.h  zb_config_common.h  zb_errors.h  zb_led_button.h  zb_mem_config_common.h  zb_mem_config_context.h  zb_osif.h  zb_trace.h  zb_types.h  zb_version.h  zboss_api_af.h  zboss_api_buf.h  zboss_api_core.h  zboss_api_internal.h  zboss_api_nwk.h  zboss_api_zcl.h  zboss_api_zdo.h
lib/zboss/production/include/ha/: zb_ha_custom_attr.h  zb_ha_device_config.h  zb_ha_dimmable_light.h  zb_ha_gp_dev.h  zb_ha_ias_warning_device.h  zb_ha_mains_power_outlet.h  zb_ha_test_device.h  zb_ha_thermostat.h  zb_ha_window_covering.h
lib/zboss/production/include/ncp/: ncp_dev_api.h
lib/zboss/production/include/osif/: build_info.h  zb_revision_r22.h  zb_transceiver.h
lib/zboss/production/include/zcl/: zb_zcl_analog_input.h  zb_zcl_analog_value.h  zb_zcl_carbon_dioxide_measurement.h  zb_zcl_common.h  zb_zcl_custom_cluster.h  zb_zcl_door_lock.h  zb_zcl_drlc.h  zb_zcl_groups.h  zb_zcl_ias_wd.h  zb_zcl_ias_zone.h  zb_zcl_keep_alive.h  zb_zcl_level_control.h  zb_zcl_meter_identification.h  zb_zcl_multistate_value.h  zb_zcl_occupancy_sensing.h  zb_zcl_on_off.h  zb_zcl_on_off_switch_conf.h  zb_zcl_ota_upgrade.h  zb_zcl_power_config.h  zb_zcl_rel_humidity_measurement.h  zb_zcl_scenes.h  zb_zcl_shade_config.h  zb_zcl_thermostat.h  zb_zcl_touchlink_commissioning.h
lib/zboss/production/src/include/: zb_aps_globals.h  zb_bufpool.h  zb_bufpool_globals.h  zb_commissioning.h  zb_common.h  zb_common_u.h  zb_direct_common.h  zb_ecc.h  zb_g_context.h  zb_mac.h  zb_nvram.h  zb_nwk.h  zb_nwk_ed_aging.h  zb_nwk_globals.h  zb_nwk_neighbor.h  zb_scheduler.h  zb_secur.h  zb_signals.h  zb_zcl.h  zb_zdo.h  zb_zdo_globals.h  zboss_api_buf_legacy.h  zdo_hubs.h  zdo_wwah_stubs.h  zdo_wwah_survey_beacons.h
lib/zboss/production/src/zcl/: zcl_analog_value.c  zcl_attr_value.c  zcl_basic_commands.c  zcl_c_wwah.c  zcl_color_control_commands.c  zcl_common.c  zcl_direct_configuration_commands.c  zcl_ias_ace_commands.c  zcl_ias_wd_commands.c  zcl_level_control_commands.c  (+11 more)
lib/zboss/src/: CMakeLists.txt
lib/zboss/src/include/: hw_crypto_api.h  zb_aps.h  zb_aps_globals.h  zb_bdb_internal.h  zb_bdb_preinst_nwk.h  zb_bufpool.h  zb_commissioning.h  zb_common.h  zb_direct_globals.h  zb_g_context.h  zb_hash.h  zb_mac.h  zb_mac_transport.h  zb_nvram.h  zb_nvram_globals.h  zb_nwk.h  zb_nwk_ed_aging.h  zb_nwk_globals.h  zb_nwk_mm.h  zb_nwk_neighbor.h  zb_nwk_nib.h  zb_scheduler.h  zb_secur.h  zb_signals.h  zb_tcswap.h  zb_test_profile.h  zb_th_dummy.h  zb_time.h  zb_tlv.h  zb_zdo.h  zb_zdo_globals.h  zb_zdo_rjb.h  zboss_api_error.h  zdo_diagnostics.h  zdo_wwah_parent_classification.h
lib/zboss/src/zcl/: zb_zcl_s_metering.c  zcl_alarms_commands.c  zcl_analog_input.c  zcl_basic_commands.c  zcl_c_drlc.c  zcl_c_price.c  zcl_carbon_dioxide_measurement.c  zcl_color_control_commands.c  zcl_common.c  zcl_continuous_value_change_commands.c  zcl_control4_networking.c  zcl_device_temp_config.c  zcl_direct_configuration_commands.c  zcl_door_lock.c  zcl_en50523_appliance_events_and_alerts.c  zcl_general_commands.c  zcl_groups.c  zcl_ias_ace_commands.c  zcl_ias_wd_commands.c  zcl_ias_zone_commands.c  zcl_identify_commands.c  zcl_main.c  zcl_multistate_input.c  zcl_occupancy_sensing_commands.c  zcl_on_off_commands.c  zcl_ota_upgrade_commands.c  zcl_ota_upgrade_srv_commands.c  zcl_pm2_5_measurement.c  zcl_poll_control_client.c  zcl_poll_control_commands.c  zcl_power_config_commands.c  zcl_pressure_measurement.c  zcl_reporting.c  zcl_s_daily_schedule.c  zcl_s_metering.c  zcl_s_price.c  zcl_s_wwah.c  zcl_scenes.c  zcl_temp_measurement.c  zcl_thermostat_commands.c  (+2 more)
lib/zboss/trace/include/: libzboss_config.ed.h  libzboss_config.h
(+1766 files in other folders)
